Fixed box shadow in dark mode and fixed header div that was adding to width

--- a/gelato-parlor/src/components/cards/full-card.css
+++ b/gelato-parlor/src/components/cards/full-card.css
@@ -15,6 +15,9 @@
 .full-card__content.dark {
     background-color: #2f1921;
 }
+.full-card.dark {
+    box-shadow: none;
+}
 
 .full-card__content  {
     background: ffffff;
